parse patched versions of IMGT DAT

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,8 @@
-beautifulsoup4==4.6.0
-biopython==1.70
-html5lib==1.0.1
-lxml==4.9.1
-numpy==1.22.0
-pandas==0.22.0
-PyMySQL==0.8.0
-python-dateutil==2.7.0
-pytz==2018.3
-six==1.11.0
-webencodings==0.5.1
+biopython==1.83
+lxml==5.1.0
+numpy==1.26.4
+pandas==2.2.1
+python-dateutil==2.9.0.post0
+pytz==2024.1
+six==1.16.0
+tzdata==2024.1
